# polyalign

./: main.py  polyalign.py  pyproject.toml
alignment/: argmax.py  itermax.py
models/: embedder.py  similarity.py
